connected to database, updated swagger
